--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/info/applied_model_popup_list.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/info/applied_model_popup_list.html
@@ -2,15 +2,15 @@
 <html
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{portal/layout/popup/index}">
+	layout:decorate="~{portal/layout/iv/uk/parts/popup/index}">
 
 <th:block layout:fragment="content">
 <div class="block-header">
-	<div class="block-title" th:text="#{DIVUK_TXT_0027}"></div><!-- Models applied by part  -->
+	<div class="block-title" th:text="#{UKP_T_0027}"></div><!-- Models applied by part  -->
 	<div class="block-button-area">
-		<button id="BTN_download" type="button" th:text="#{DIVUK_BTN_0013}"></button><!-- Download -->
-		<button id="BTN_search" type="button" th:text="#{DIVUK_BTN_0012}"></button><!-- Search -->		
-		<!-- button id="BTN_close" type="button" th:text="#{DIVUK_BTN_0005}"></button><!-- Close -->
+		<button id="BTN_download" type="button" th:text="#{UKP_B_0013}"></button><!-- Download -->
+		<button id="BTN_search" type="button" th:text="#{UKP_B_0012}"></button><!-- Search -->		
+		<!-- button id="BTN_close" type="button" th:text="#{UKP_B_0005}"></button><!-- Close -->
 	</div>		
 </div>	
 
@@ -20,7 +20,7 @@
 <table class="condition">
 	<tbody>
 		<tr>
-			<th th:text="#{DIVUK_LB_0042}"></th><!--Parts No.  -->
+			<th th:text="#{UKP_L_0042}"></th><!--Parts No.  -->
 			<td>
 				<div class="input-area">
 					<input type="text" id="pPartsNo" name="pPartsNo" class="custom-ui-btn" th:value="${pPartsNo}" style="text-transform: uppercase;">
@@ -55,8 +55,8 @@ $(function(){
 		ordering: true, 
 		scrollY: 100,
 		columns : [					
-			{data: "SEQ", 		title: "[[#{DIVUK_LB_0044}]]"	},	//Seq.
-			{data: "MAKTX", 	title: "[[#{DIVUK_LB_0067}]]"	},	//Model
+			{data: "SEQ", 		title: "[[#{UKP_L_0044}]]"	},	//Seq.
+			{data: "MAKTX", 	title: "[[#{UKP_L_0067}]]"	},	//Model
 			{data: "MATNR", 	title: "MATNR"	},	
 			{data: "MDESC", 	title: "MDESC"	},	
 			{data: "MVGR3", 	title: "MVGR3"	},	
@@ -69,7 +69,7 @@ $(function(){
 			}			
 		],
 		ajax: {
-			url: "/portal/corp/uk/scm/parts/info/applied_model_popup_list/data",
+			url: "[[${BASE_PATH}]]/info/applied_model_popup_list/data",
 			data: function(p)
 			{				
 				p.pPartsNo = $("#pPartsNo").val();
@@ -137,7 +137,7 @@ function doSearch()
  function searchParts()
  {
  	let param = "pPartsNo=" + $("#pPartsNo").val();
- 	Popup.open("/portal/corp/uk/scm/parts/info/parts_number_popup_list?" + param, 700, 600);		
+ 	Popup.open("[[${BASE_PATH}]]/info/parts_number_popup_list?" + param, 700, 600);		
  }
 
 function setPartsNo(partsNo)
