--- a/src/main/resources/templates/portal/iv/uk/parts/domestic/info/part_info_list.html
+++ b/src/main/resources/templates/portal/iv/uk/parts/domestic/info/part_info_list.html
@@ -2,7 +2,7 @@
 <html
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	layout:decorate="~{portal/layout/common/index}">
+	layout:decorate="~{portal/layout/iv/uk/parts/common/index}">
 
 <th:block layout:fragment="content">
 
@@ -15,9 +15,9 @@
 </style>
 
 <div class="block-header">
-	<div class="block-title" th:text="#{DIVUK_TXT_0024}"></div><!-- Parts Info. -->
+	<div class="block-title" th:text="#{UKP_T_0024}"></div><!-- Parts Info. -->
 	<div class="block-button-area">
-		<button id="BTN_search" type="button" th:text="#{DIVUK_BTN_0012}"></button><!-- Search -->		
+		<button id="BTN_search" type="button" th:text="#{UKP_B_0012}"></button><!-- Search -->		
 	</div>	
 </div>	
 <div class="condition-area">
@@ -25,7 +25,7 @@
 <table class="condition table-fixed">
 	<tbody>
 		<tr>
-			<th style="width:150px" th:text="#{DIVUK_LB_0042}"></th><!-- Parts No. -->
+			<th style="width:150px" th:text="#{UKP_L_0042}"></th><!-- Parts No. -->
 			<td>
 				<div class="input-area">
 					<input type="text" id="pPartsNo" name="pPartsNo" class="custom-ui-btn" style="text-transform: uppercase;" tabindex="1">
@@ -33,7 +33,7 @@
 					<button class="btn-popup2" type="button" onclick="searchParts();"></button>					
 				</div>
 			</td>
-			<th style="width:150px" th:text="#{DIVUK_LB_0144}"></th><!-- Req Qty -->
+			<th style="width:150px" th:text="#{UKP_L_0144}"></th><!-- Req Qty -->
 			<td>
 				<div class="input-area">
 				<input type="text" id="pReqQty" name="pReqQty" class="custom-ui" tabindex="2">
@@ -50,15 +50,15 @@
 <table class="condition table-fixed">
 	<tbody>
 		<tr>
-			<th style="width:150px" th:text="#{DIVUK_LB_0062}"></th><!--Part No Desc  -->
+			<th style="width:150px" th:text="#{UKP_L_0062}"></th><!--Part No Desc  -->
 			<td id="MAKTX"></td>
-			<th style="width:150px" th:text="#{DIVUK_LB_0063}"></th><!-- Stock -->
+			<th style="width:150px" th:text="#{UKP_L_0063}"></th><!-- Stock -->
 			<td id="AVA_FLAG"></td>			
 		</tr>		
 		<tr>
-			<th th:text="#{DIVUK_LB_0064}"></th><!-- Serviceable -->
+			<th th:text="#{UKP_L_0064}"></th><!-- Serviceable -->
 			<td id="SVRCD"></td>
-			<th th:text="#{DIVUK_LB_0065}"></th><!--Not Service Reason  -->
+			<th th:text="#{UKP_L_0065}"></th><!--Not Service Reason  -->
 			<td>
 				<span id="NOT_SERVICE"></span>
 				
@@ -68,9 +68,9 @@
 			</td>
 		</tr>		
 		<tr>
-			<th th:text="#{DIVUK_LB_0066}"></th><!-- Sales Lot  -->
+			<th th:text="#{UKP_L_0066}"></th><!-- Sales Lot  -->
 			<td id="AUMNG"></td>
-			<th th:text="#{DIVUK_LB_0067}"></th><!-- Model -->
+			<th th:text="#{UKP_L_0067}"></th><!-- Model -->
 			<td>						
 				<div id="AREA_appliedModel" style="display:none;">			
 				<span id="M_MATNR" class="custom-ui"></span>
@@ -79,26 +79,26 @@
 			</td>			
 		</tr>			
 		<tr>
-			<th th:text="#{DIVUK_LB_0068}"></th><!--Product Hierarchy  -->
+			<th th:text="#{UKP_L_0068}"></th><!--Product Hierarchy  -->
 			<td id="PRODH_T"></td>
-			<th th:text="#{DIVUK_LB_0069}"></th><!--Open Qty  -->
+			<th th:text="#{UKP_L_0069}"></th><!--Open Qty  -->
 			<td id="KWMENG"></td>			
 		</tr>	
 		<tr>
-			<th th:text="#{DIVUK_LB_0070}"></th><!--Net Weight  -->
+			<th th:text="#{UKP_L_0070}"></th><!--Net Weight  -->
 			<td id="NTGEW"></td>
-			<th th:text="#{DIVUK_LB_0071}"></th><!--List Price Cost Code  -->
+			<th th:text="#{UKP_L_0071}"></th><!--List Price Cost Code  -->
 			<td id="KONDM"></td>			
 		</tr>
 		<tr>
-			<th th:text="#{DIVUK_LB_0072}"></th><!--Supply Part Number  -->
+			<th th:text="#{UKP_L_0072}"></th><!--Supply Part Number  -->
 			<td>				
 				<div id="AREA_subItem" style="display:none;">			
 				<span id="REPNR" class="custom-ui"></span>
 				<button id="BTN_subItem" class="btn-popup2" type="button" onclick="showMoreInfoPop(this);"></button>
 				</div>
 			</td>
-			<th th:text="#{DIVUK_LB_0073}"></th><!--Stock of Supply Part  -->
+			<th th:text="#{UKP_L_0073}"></th><!--Stock of Supply Part  -->
 			<td id="STOCKP"></td>			
 		</tr>
 	</tbody>
@@ -109,13 +109,13 @@
 <table class="condition">
 	<thead>
 		<tr>
-			<th rowspan="2" th:text="#{DIVUK_LB_0074}"></th><!--List Price  -->
-			<th colspan="3" th:text="#{DIVUK_LB_0075}"></th><!-- Net Price -->			
+			<th rowspan="2" th:text="#{UKP_L_0074}"></th><!--List Price  -->
+			<th colspan="3" th:text="#{UKP_L_0075}"></th><!-- Net Price -->			
 		</tr>		
         <tr>
-            <th th:text="#{DIVUK_LB_0076}"></th><!-- Stock Order -->
-            <th th:text="#{DIVUK_LB_0077}"></th><!-- Machine Down Order -->
-            <th th:text="#{DIVUK_LB_0078}"></th><!--Emergency Order  -->                        
+            <th th:text="#{UKP_L_0076}"></th><!-- Stock Order -->
+            <th th:text="#{UKP_L_0077}"></th><!-- Machine Down Order -->
+            <th th:text="#{UKP_L_0078}"></th><!--Emergency Order  -->                        
         </tr>
      </thead>
      <tbody>
@@ -129,22 +129,24 @@
 </table>	
 </div>	
 <script type="application/javascript">
-$(window).load(function() {
+$(document).ready(function() 
+{	
 	ProgressBar.hide();
 });
+
 
 function doSearch()
 {
 	if (CmStringUtils.isEmpty($("#pPartsNo").val()))
 	{
-		alert("[[#{DIVEU_MSG_0038}]]");
+		alert("[[#{EUP_M_0038}]]");
 		return;
 	}	
 	
 	$("#pPartsNo").val($("#pPartsNo").val().toUpperCase());
 	
 	$.ajax({
-		url: "/portal/corp/uk/scm/parts/info/part_info_list/data",		
+		url: "[[${BASE_PATH}]]/info/part_info_list/data",		
 		data: {	"pPartsNo": $("#pPartsNo").val(), "pReqQty": $("#pReqQty").val() },
 		beforeSend: function(jqXHR, settings)
 		{
@@ -157,7 +159,7 @@ function doSearch()
 	    	
 	    	if (items.length == 0)
 	    	{
-	    		alert("[[#{DIVEU_MSG_0015}]]");
+	    		alert("[[#{EUP_M_0015}]]");
 	    		document.location.reload();
 	    	};	    	
 	    	
@@ -269,7 +271,7 @@ $("#pPartsNo, #pReqQty").on("keydown", function(event) {
 $("#pPartsNo").autocomplete({	
 	source: function(request, response) {
 		$.ajax({
-			url: "/portal/corp/eu/scm/parts/info/autocompete/data",
+			url: "[[${BASE_PATH}]]/info/autocompete/data",
 			data: {	"pPartsNo": $("#pPartsNo").val() },			
 			success: function(data, textStatus, jqXHR)
 			{
@@ -298,7 +300,7 @@ $("#pPartsNo").autocomplete({
  */ 	
 function searchParts(){
 	var param = "pPartsNo=" + $("#pPartsNo").val();
-	Popup.open("/portal/corp/uk/scm/parts/info/parts_number_popup_list?" + param, 700, 600);
+	Popup.open("[[${BASE_PATH}]]/info/parts_number_popup_list?" + param, 700, 600);
 };
 
 /**
@@ -317,16 +319,16 @@ function showMoreInfoPop(obj)
 	{
 		if ("BTN_subItem" == id)
 		{
-			url = "/portal/corp/uk/scm/parts/info/sub_item_popup_list";	
+			url = "[[${BASE_PATH}]]/info/sub_item_popup_list";	
 		}
 		else if ("BTN_appliedModel" == id)
 		{
-			url = "/portal/corp/uk/scm/parts/info/applied_model_popup_list";
+			url = "[[${BASE_PATH}]]/info/applied_model_popup_list";
 			width = 800;			
 		}
 		else if ("BTN_notServReason" == id)
 		{
-			url = "/portal/corp/uk/scm/parts/info/alternative_popup_list";
+			url = "[[${BASE_PATH}]]/info/alternative_popup_list";
 			width = 700;
 		}
 		
